- preparation for opening neighbour folder if user steps before first or after last element of fileTable: PathHelpers.java